--- a/css/styles.css
+++ b/css/styles.css
@@ -11482,7 +11482,7 @@ footer.footer .social-link:hover {
   height: auto;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("https://github.com/mcostaa/FotoFondo/blob/a5adcf22a14a55208090c2404fa7e89a0d19972e/bg-masthead.JPG");
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("https://raw.githubusercontent.com/mcostaa/FotoFondo/main/bg-masthead.JPG");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
